fix unevenly sized boxes in features section

--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,8 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
   padding: 2.5rem;
-  min-height: 22rem;
+  min-height: 24rem;
+  max-height: 24rem;
   text-align: center;
   border-radius: 2px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
